--- a/bituach.html
+++ b/bituach.html
@@ -6,18 +6,16 @@ dir="RTL" >
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title> ביטוח לאומי</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>    לומדים חישוב שכר</h1> 
 
 
 
 
-   <h2> <a href="incomeTax.html" > מס הכנסה </a> </h2>
 
-   <h2> <a href="bituach.html" > ביטוח לאומי </a> </h2>
+
     <script src="script.js"></script>
   </body>
 </html>
